tests/fsharp/typecheck/sigs/neg05.bsl

neg05.fs(5,9,5,12): typecheck error FS0866: Interfaces cannot contain definitions of object constructors

neg05.fs(9,6,9,8): typecheck error FS0947: Struct types cannot contain abstract members

neg05.fs(13,6,13,8): typecheck error FS0927: The kind of the type specified by its attributes does not match the kind implied by its definition

neg05.fs(18,6,18,8): typecheck error FS0927: The kind of the type specified by its attributes does not match the kind implied by its definition

neg05.fs(23,6,23,8): typecheck error FS0927: The kind of the type specified by its attributes does not match the kind implied by its definition

neg05.fs(28,6,28,8): typecheck error FS0927: The kind of the type specified by its attributes does not match the kind implied by its definition

neg05.fs(33,6,33,8): typecheck error FS0927: The kind of the type specified by its attributes does not match the kind implied by its definition

neg05.fs(38,6,38,8): typecheck error FS0927: The kind of the type specified by its attributes does not match the kind implied by its definition

neg05.fs(46,46,46,60): typecheck error FS0754: Calls to object constructors on type parameters cannot be given arguments

neg05.fs(59,10,59,26): typecheck error FS0064: This construct causes code to be less generic than indicated by the type annotations. The type variable 'a has been constrained to be type 'unit'.

neg05.fs(57,15,57,18): typecheck error FS1198: The generic member 'Pop' has been used at a non-uniform instantiation prior to this program point. Consider reordering the members so this member occurs first. Alternatively, specify the full type of the member explicitly, including argument types, return type and any additional generic parameters and constraints.

neg05.fs(51,11,51,13): typecheck error FS0663: This type parameter has been used in a way that constrains it to always be 'unit'

neg05.fs(51,11,51,13): typecheck error FS0660: This code is less generic than required by its annotations because the explicit type variable 'a' could not be generalized. It was constrained to be 'unit'.
